tests/ui/associated-types/hr-associated-type-bound-2.stderr
error: implementation of `X` is not general enough
   |
   = note: `Self` must implement `X<'0>`, for any lifetime `'0`...
   = note: ...but it actually implements `X<'a>`

error: implementation of `X` is not general enough
   |
   = note: `Self` must implement `X<'0>`, for any lifetime `'0`...
   = note: ...but it actually implements `X<'a>`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: implementation of `X` is not general enough
  --> $DIR/hr-associated-type-bound-2.rs:1:1
   |
LL | / trait X<'a>
LL | | where
LL | |     for<'b> <Self as X<'b>>::U: Clone,
...  |
LL | | }
   | |_^ implementation of `X` is not general enough
   |
   = note: `Self` must implement `X<'0>`, for any lifetime `'0`...
   = note: ...but it actually implements `X<'a>`

error: implementation of `X` is not general enough
  --> $DIR/hr-associated-type-bound-2.rs:1:1
   |
LL | / trait X<'a>
LL | | where
LL | |     for<'b> <Self as X<'b>>::U: Clone,
...  |
LL | | }
   | |_^ implementation of `X` is not general enough
   |
   = note: `Self` must implement `X<'0>`, for any lifetime `'0`...
   = note: ...but it actually implements `X<'a>`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0275]: overflow evaluating the requirement `for<'b> u32: X<'b>`
  --> $DIR/hr-associated-type-bound-2.rs:11:1
   |
LL | / impl X<'_> for u32
LL | | where
LL | |     for<'b> <Self as X<'b>>::U: Clone,
   | |______________________________________^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`hr_associated_type_bound_2`)
note: required for `u32` to implement `for<'b> X<'b>`
  --> $DIR/hr-associated-type-bound-2.rs:11:6
   |
LL | impl X<'_> for u32
   |      ^^^^^     ^^^
LL | where
LL |     for<'b> <Self as X<'b>>::U: Clone,
   |                                 ----- unsatisfied trait bound introduced here
   = note: 128 redundant requirements hidden
   = note: required for `u32` to implement `for<'b> X<'b>`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0275`.
